--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h4>color flipper</h4>
         <ul class="nav-links">
           <li>
-            <a>KAYUBILISIM</a>
+            <a>SERRA</a>
           </li>
         </ul>
       </div>
